--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# local env files
+.env.local
+# clerk configuration (can include secrets)
+/.clerk/
