--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.19.3",
     "next": "^15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
