--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bcrypt-ts": "^6.0.0",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "swr": "^2.3.3"
   },
   "devDependencies": {
