--- a/backend/package.json
+++ b/backend/package.json
@@ -29,16 +29,17 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/express": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.0.38",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "nodemon": "^3.1.10",
     "prisma": "^6.8.2",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.7",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
